
find_package(LLVM REQUIRED CONFIG)
message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")

include_directories(${LLVM_INCLUDE_DIRS})
separate_arguments(LLVM_DEFINITIONS_LIST NATIVE_COMMAND ${LLVM_DEFINITIONS})
add_definitions(${LLVM_DEFINITIONS_LIST})


add_library(CodeGen STATIC 
            CodeGenerator.cpp
            CodeGenerationDriver.cpp
            )

target_include_directories(CodeGen PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(CodeGen AST LLVM) #Link to LLVM dynamically 